<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/update_profile"
            android:icon="@drawable/update"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/apply_leave"
            android:icon="@drawable/send"
            android:title="@string/apply_for_leave" />
        <item
            android:id="@+id/send_notification"
            android:icon="@drawable/email"
            android:title="@string/send_notification" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/power"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>
