<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back1"
    tools:context="za.co.lutendomlab.loginfirebase.SignupActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="206dp"
        android:layout_height="91dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.58"
        android:background="@drawable/newicon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="20dp"

        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839" />

        <EditText
            android:id="@+id/lastName"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839"
            android:maxLines="1"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_password"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839"
            android:maxLines="1"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="Confirm password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839"/>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="Phone Number"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839"/>

        <Spinner
            android:id="@+id/simpleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839"/>

        <TextView
            android:id="@+id/Staff_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Staff Number"
            android:paddingTop="10dp"
            android:textColor="#1c7839"
            android:textColorHint="#1c7839"
            android:layout_gravity="center"
            android:clickable="false"
            android:enabled="false"
            android:visibility="gone"
            android:textSize="20dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/action_sign_in_short"
        android:textSize="20dp"
        android:textColor="#1c7839"
        android:textColorHint="#1c7839"
        android:textStyle="bold" />

    <!-- Link to Login Screen -->

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textStyle="italic"
        android:textColor="#1c7839"
        android:textColorHint="#1c7839"
        android:textSize="15dp"/>

</LinearLayout>
